traefik/external/sonarr/service_external_sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  ports:
  - name: https
    port: 443
  type: ExternalName
  externalName: sonarr.example.com
