traefik/external/sonarr/external_sonarr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
spec:
  rules:
  - host: sonarr.$DOMAIN
    http:
      paths:
        - backend:
            serviceName: sonarr
            servicePort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - name: sonarr
    port: 8989
  type: ExternalName
  externalName: swarm
