traefik/external/sonarr/ingress_external_sonarr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
spec:
  rules:
  - host: swarm
    http:
      paths:
        backend:
          serviceName: static
          servicePort: 8989
